Added gsap scroll triger animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<main>
-  <div #container class="Canvascontainer">
-    <canvas #myCanvas id="myCanvas"></canvas>
-  </div>
-</main>
+<router-outlet></router-outlet>
